--- a/pcgen/preview/d20/fantasy/Standard.htm
+++ b/pcgen/preview/d20/fantasy/Standard.htm
@@ -2630,18 +2630,20 @@ Immune
 
 <!-- START Archetypes Table -->
 |IIF(count("ABILITIES";"CATEGORY=Archetype";"TYPE=Archetype";"VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")>0)|
-   <table width="100%" cellspacing="0" cellpadding="2" summary="Arcehtype Table">
-    <tr>
-     <td bgcolor="black" align="center"><font color="white" style="font-size: 9pt"><b>Archetypes</b></font></td>
-    </tr>
+	<table width="100%" cellspacing="0" cellpadding="2" summary="Arcehtype Table">
+		<tr>
+			<td bgcolor="black" align="center" class="ab" colspan="2"><b>Archetypes</b></td>
+		</tr>
 |FOR,%archetype,0,count("ABILITIES","CATEGORY=Archetype","TYPE=Archetype","VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")-1,1,0|
 |OIF(EVEN:%archetype,<tr bgcolor="#DDDDDD">,<tr bgcolor="white">)|
-     <td valign="top" class="font8"><b>|ABILITYALL.Archetype.VISIBLE.%archetype.TYPE=Archetype|
-</b>
-|ABILITYALL.Archetype.VISIBLE.%archetype.TYPE=Archetype.DESC|</td>
-    </tr>
+	<td valign="top" width="70%" class="font8"><b>|ABILITYALL.Archetype.VISIBLE.%archetype.TYPE=Archetype|</b></td>
+	<td class="font8" valign="top"	width="30%" align="right">[|ABILITYALL.Archetype.VISIBLE.%archetype.TYPE=Archetype.SOURCE|]</td>
+	<tr>
+|OIF(EVEN:%archetype,<tr bgcolor="#DDDDDD">,<tr bgcolor="white">)|
+<td class="font8" valign="top"	align="indent" colspan="2">&#160;&#160;&#160;&#160;|ABILITYALL.Archetype.VISIBLE.%archetype.TYPE=Archetype.DESC|</td>
+</tr>
 |ENDFOR|
-   </table>
+	</table>
 |ENDIF|
 <!-- STOP Archetypes Table -->
 
