--- a/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_compact.htm
+++ b/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_compact.htm
@@ -105,7 +105,7 @@ $Date$
 		<td colspan="1" class="h">|ALIGNMENT|</td>
 		<td colspan="1" class="h">|DEITY|</td>
 		<td  class="h">|POOL.COST|</td>
-		<td rowspan="6" align="center" width="1%" class="border"><img src="|PORTRAIT|" alt="Character Portrait" height="100" /><br /></td>
+		<td rowspan="6" align="center" width="1%" class="border"><img src="file://|PORTRAIT|" alt="Character Portrait" height="100" /><br /></td>
 	</tr>
 	<tr>
 		<td colspan="2" class="topline">CHARACTER NAME</td>
