--- a/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock_SRD.htm
+++ b/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock_SRD.htm
@@ -121,6 +121,14 @@ th
 |ELSE|
 |AC.NaturalArmor.SIGN| natural, 
 |ENDIF|
+|IIF(AC.Dodge:0)|
+|ELSE|
+|AC.Dodge.SIGN| dodge,
+|ENDIF|
+|IIF(AC.Deflection:0)|
+|ELSE|
+|AC.Deflection.SIGN| deflection, 
+|ENDIF|
 |IIF(AC.Misc:0)|
 |ELSE|
 |AC.Misc.SIGN| misc
