--- a/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock2.htm
+++ b/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock2.htm
@@ -35,7 +35,7 @@ $Date$
 </style>
 </head>
 <body>
-<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
+<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</span>
 <p><b>|NAME|, |GENDER| |RACE||%REGION| From |REGION|.|%| |CLASSLIST|</b>&nbsp;
 CR |CR|; Size: |SIZE| Face: |FACE.SHORT| Type 
 |IIF(RACETYPE:None)|
