--- a/pcgen/outputsheets/d20/fantasy/htmlxml/eqsheet_fantasy_consumables.htm
+++ b/pcgen/outputsheets/d20/fantasy/htmlxml/eqsheet_fantasy_consumables.htm
@@ -52,7 +52,7 @@ $Date$
 </style>
 </head>
 <body>
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <center>
 <h2>Consumable Equipment Sheet</h2>
 </center>
