--- a/pcgen/outputsheets/d20/fantasy/htmlxml/eqsheet_fantasy_std.htm
+++ b/pcgen/outputsheets/d20/fantasy/htmlxml/eqsheet_fantasy_std.htm
@@ -132,7 +132,7 @@ TBODY TR TD.firstItem
 |EQSET.START|
 <!-- everything below this line will get output once for each Equipment Set -->
 
-<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
+<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</span>
 <div>
 <table width="100%" summary="Master Equipment Table">
 	<thead>
