--- a/pcgen/outputsheets/d20/modern/htmlxml/csheet_modern_std.htm
+++ b/pcgen/outputsheets/d20/modern/htmlxml/csheet_modern_std.htm
@@ -112,14 +112,14 @@
 </style>
 </head>
 <body bgcolor="white">
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <!-- START Top Character Data -->
 <table summary="formatting table" cellpadding="0" cellspacing="4" border="0" width="100%">
  <tr>
   <td colspan="3" class="h1"><b>|NAME|</b></td>
   <td colspan="3" class="h1">|PLAYERNAME|</td>
   <td class="h">|POOL.COST|</td>
-  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><a href="#Bio"><img src="|PORTRAIT|" height="100" alt="Click for Bio" border="0" /></a><br /><br /></font></td>
+  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><a href="#Bio"><img src="file://|PORTRAIT|" height="100" alt="Click for Bio" border="0" /></a><br /><br /></font></td>
  </tr>
  <tr>
   <td colspan="3" class="topline">CHARACTER NAME</td>
@@ -879,7 +879,7 @@
 
 <!-- ================================================================ -->
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <table summary="formatting table" width="100%" border=0>
 <tr>
 <td colspan=2 width="100%" valign="top">
@@ -1729,7 +1729,7 @@
 	<!-- No innate spells -->
 |ELSE|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 |FOR,%spellbook,1,1,1,1|
 |FOR,%class,0,0,1,1|
 |FOR,%level,0,0,1,1|
@@ -1819,7 +1819,7 @@
 <!-- End Innate Spells -->
 |FOR,%spellbook,0,0,1,0|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 |FOR,%class,COUNT[SPELLRACE],COUNT[SPELLRACE]+COUNT[CLASSES]-1,1,1|
 |%SPELLLISTCLASS.%class|
 <!-- START Spell list Header Table (Known) -->
@@ -1921,7 +1921,7 @@
 |FOR,%level,0,0,1,0|
 |%SPELLLISTBOOK.%class.%level.%spellbook|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <table width="100%" cellspacing="0" cellpadding="2" summary="Spell List">
  <tr>
   <td colspan="11" align="center" bgcolor="black"><font color="white"><b>Innate Spell-like Abilities</b></font></td>
@@ -2013,7 +2013,7 @@
 |IIF(%foo:0.OR.%bar:0)|
 <!-- Either we do not have a innate race, or if we do we do not have any 0 level spell for the innate race -->
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <table width="100%" cellspacing="0" cellpadding="2" summary="Spell List">
  <tr>
   <td colspan="11" align="center" bgcolor="black"><font color="white"><b>|SPELLBOOKNAME.%spellbook|</b></font></td>
@@ -2100,7 +2100,7 @@
 |%BIO|
 
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 
 <a name="Bio"></a>
 <!-- START Bio Table -->
