--- a/pcgen/outputsheets/d20/sciencefiction/htmlxml/csheet_dw2_std.htm
+++ b/pcgen/outputsheets/d20/sciencefiction/htmlxml/csheet_dw2_std.htm
@@ -62,14 +62,14 @@
 </style>
 </head>
 <body bgcolor="white">
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|<br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <!-- START Top Character Data -->
 <table summary="formatting table" cellpadding="0" cellspacing="4" border="0" width="100%">
  <tr>
   <td colspan="3" class="h1"><b>|NAME|</b></td>
   <td colspan="3" class="h1">|PLAYERNAME|</td>
   <td class="h">|POOL.COST|</td>
-  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><a href="#Bio"><img src="|PORTRAIT|" height="100" alt="Click for Bio" border="0" /></a><br /><br /></font></td>
+  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><a href="#Bio"><img src="file://|PORTRAIT|" height="100" alt="Click for Bio" border="0" /></a><br /><br /></font></td>
  </tr>
  <tr>
   <td colspan="3" class="topline">CHARACTER NAME</td>
@@ -805,7 +805,7 @@
 
 <!-- ================================================================ -->
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <table summary="formatting table" width="100%" border=0>
 <tr>
 <td colspan=2 width="100%" valign="top">
@@ -1685,7 +1685,7 @@
 
 |%BIO|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <a name="Bio"></a>
 <!-- START Bio Table -->
 <table summary="formatting table" width="100%" cellspacing="0" cellpadding="2">
