--- a/pcgen/outputsheets/d20/western/htmlxml/csheetDeadlands.htm
+++ b/pcgen/outputsheets/d20/western/htmlxml/csheetDeadlands.htm
@@ -73,7 +73,7 @@ $Date$
 </head>
 
 <body>
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <font style="font-size:6pt">
 <table cellpadding="0" cellspacing="4" border="0" width="100%">
 <tr>
@@ -458,7 +458,7 @@ Wisdom
 
 
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 
 <table width="100%" border=0>
 <tr>
@@ -602,7 +602,7 @@ Wisdom
 
 |%SPELLLISTCLASS.%class|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 
 </font><table width="100%" cellspacing="0" cellpadding="2"><font style="font-size:6pt">
 <tr>
@@ -672,7 +672,7 @@ Wisdom
 
 
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 
 <a name="Bio"></a><table width="100%" cellspacing="0" cellpadding="2">
 <TR><TD colspan="2"><font style="font-size: 14pt">|NAME|</font></td></tr>
