Fixed OS-30, Portrait not displaying in Character Sheet tab. Added "file://localhost/" to all PORTRAIT tags. Issue#: OS-30
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@13411 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/pcgen/preview/d20/modern/standard.htm
+++ b/pcgen/preview/d20/modern/standard.htm
@@ -119,7 +119,7 @@
   <td colspan="3" class="h1"><b>|NAME|</b></td>
   <td colspan="3" class="h1">|PLAYERNAME|</td>
   <td class="h">|POOL.COST|</td>
-  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><a href="#Bio"><img src="|PORTRAIT|" height="100" alt="Click for Bio" border="0" /></a><br /><br /></font></td>
+  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><a href="#Bio"><img src="file://localhost/|PORTRAIT|" height="100" alt="Click for Bio" border="0" /></a><br /><br /></font></td>
  </tr>
  <tr>
   <td colspan="3" class="topline">CHARACTER NAME</td>
