--- a/pcgen/preview/d20/western/Sidewinder.htm
+++ b/pcgen/preview/d20/western/Sidewinder.htm
@@ -68,7 +68,7 @@
   <td colspan="3" class="h1"><b>|NAME|</b></td>
   <td colspan="3" class="h1">|PLAYERNAME|</td>
   <td class="h">|POOL.COST|</td>
-  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><A href="#Bio"><IMG src="|PORTRAIT|" height="100" alt="Click for Bio" border="0"></A><br /><br /></font></td>
+  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><A href="#Bio"><IMG src="file://localhost/|PORTRAIT|" height="100" alt="Click for Bio" border="0"></A><br /><br /></font></td>
  </tr>
  <tr>
   <td colspan="3" class="topline">CHARACTER NAME</td>
