--- a/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock2.htm
+++ b/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock2.htm
@@ -105,6 +105,9 @@ SA:
 |ENDIF|
 |ENDFOR|
 |ENDIF|
+|IIF(count("ABILITIES";"CATEGORY=Special Ability";"TYPE=AnimalTrick";"VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")>0)|
+TRICKS:|ABILITYALLLIST.Special Ability.VISIBLE.TYPE=AnimalTrick|
+|ENDIF|
 |FOR,%DRtest,STRLEN[DR],STRLEN[DR],1,0|
 |IIF(%DRtest:0)|
 |ELSE|
