--- a/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_combined.htm
+++ b/pcgen/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_combined.htm
@@ -3566,6 +3566,16 @@ function RemoveStat (attribute) {
 		</tr>
 		</table>
 |ENDIF|
+|IIF(count("ABILITIES";"CATEGORY=Special Ability";"TYPE=AnimalTrick")==0)|
+|ELSE|
+   <table width="100%" cellspacing="0" cellpadding="2">
+    <tr>
+     <td class="c9wB">ANIMAL TRICKS</td>
+    </tr>
+     <td class="lt8s" width="100%">|ABILITYLIST.Special Ability.TYPE=AnimalTrick|</td>
+    </tr>
+   </table>
+|ENDIF|
 |IIF(count("ABILITIES";"CATEGORY=Special Ability";"TYPE=SpecialQuality")>0)|
 		<table width="100%" cellspacing="0" cellpadding="2">
 		<tr>
