Prepare for RC release
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/branches/5.16.x@13794 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/pcgen/installers/release-notes/pcgen-release-notes-5164RC3.html
+++ b/pcgen/installers/release-notes/pcgen-release-notes-5164RC3.html
@@ -132,7 +132,7 @@ This software is not published, endorsed, or specifically approved by Paizo Publ
 about Paizo's Community Use Policy, please visit paizo.com/communityuse. For more information about Paizo 
 Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com</a>.</p>
 
-<p><i>James Dempsey</i> for the PCGEN Team -- 1 July, 2010.</p>
+<p><i>James Dempsey</i> for the PCGEN Team -- 7 November, 2010.</p>
 
 
 
@@ -304,6 +304,8 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-360'>CODE-360</a>] -         BONUS:MOVEADD|TYPE.%LIST|10  w/ CHOICE adds %LIST
 </li>
+<li>[<a href='http://jira.pcgen.org/browse/CODE-363'>CODE-363</a>] -         File Picker for Characters no longer remembers directories
+</li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-364'>CODE-364</a>] -         OUTPUTNAME:[NAME] strips all trailing parentheses
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-369'>CODE-369</a>] -         NPE - Applying HASTE via Temp Bonus to a Kit Shadow causes break down.
@@ -311,6 +313,8 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 <li>[<a href='http://jira.pcgen.org/browse/CODE-371'>CODE-371</a>] -         UI vs. OS Sheets - if a FEAT / ABILITY has a COST other than (1) then the (x#) is COST * TAKEN instead of just TAKEN
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-372'>CODE-372</a>] -         Vars attached to Domains aren't being removed from the PC when the Domain is removed.
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/CODE-376'>CODE-376</a>] -         Batch processing of PCs failing
 </li>
 </ul>
 
