--- a/pcgen/preview/d20/fantasy/compact.htm
+++ b/pcgen/preview/d20/fantasy/compact.htm
@@ -736,7 +736,8 @@ Wisdom
 					<td align="center" bgcolor="black" width="60" height="15"><font style="font-size:6pt" color="white"><b>DAMAGE</b></font></td>
 					<td align="center" bgcolor="black" width="60" height="15"><font style="font-size:6pt" color="white"><b>CRITICAL</b></font></td>
 				</tr>
-				<tr><td align="center" bgcolor="white" class="border8"><b>|WEAPONH.TOTALHIT|<br /></b></td>
+				<tr>
+                    <td align="center" bgcolor="white" class="border8"><b>|WEAPONH.TOTALHIT|<br /></b></td>
 					<td align="center" bgcolor="white" class="border8"><b>|WEAPONH.DAMAGE|<br /></b></td>
 					<td align="center" bgcolor="white" class="border8"><b>|WEAPONH.CRIT|/x|WEAPONH.MULT|<br /></b></td>
 				</tr>
@@ -746,7 +747,7 @@ Wisdom
 <br />
 			<table cellpadding="0" width="100%" cellspacing="0" border="0" summary="Weapon Table">
 				<tr><td bgcolor="black"><font style="font-size:7pt" color="white"><b>WEAPON<br /></b></font></td><td bgcolor="black" align="center"><font style="font-size:4pt" color="white"><b>BONUS<br /></b></font></td><td bgcolor="black" align="center"><font style="font-size:4pt" color="white"><b>DAMAGE<br /></b></font></td><td bgcolor="black" align="center"><font style="font-size:4pt" color="white"><b>CRITICAL<br /></b></font></td><td bgcolor="black" align="center"><font style="font-size:4pt" color="white"><b>HAND<br /></b></font></td><td bgcolor="black" align="center"><font style="font-size:4pt" color="white"><b>RANGE<br /></b></font></td><td bgcolor="black" align="center"><font style="font-size:4pt" color="white"><b>TYPE<br /></b></font></td><td bgcolor="black" align="center"><font style="font-size:4pt" color="white"><b>SIZE<br /></b></font></td></tr>
-				|FOR.0,100,1,<tr><td class="font8"><b>\WEAPON.%.NAME\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.TOTALHIT\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.DAMAGE\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.CRIT\/x\WEAPON.%.MULT\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.HAND\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.RANGE\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.TYPE\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.SIZE\<br /></b></td></tr><tr><td align="center" colspan="8" class="font8">\WEAPON.%.SPROP\</td></tr>, , ,1|
+				|FOR.0,100,1,<tr><td class="font8"><b>\WEAPON.%.NAME\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.CONTENTS.0.TOTALHIT\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.CONTENTS.0.DAMAGE\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.CRIT\/x\WEAPON.%.MULT\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.HAND\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.RANGE\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.TYPE\<br /></b></td><td align="center" class="font8"><b>\WEAPON.%.SIZE\<br /></b></td></tr><tr><td align="center" colspan="8" class="font8">\WEAPON.%.SPROP\</td></tr>, , ,1|
 			</table>
 <!-- STOP Weapon Table -->
 <!-- START Armor Table -->
