--- a/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-11-30-2010.html
+++ b/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-11-30-2010.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >
-		<title>Release Notes for PCGen OOC Data Sets v5.16.1</title>
+		<title>Release Notes for PCGen OOC Data Sets v5.16.4</title>
 		<link rel="stylesheet" type="text/css" href="http://sourceforge.net/cssdef.php">
 	</head>
 
@@ -44,12 +44,12 @@
 
 		<blockquote> 
 		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide Data Set (Alpha x)</strong><br>
-			<em>File</em>: <a href="">5164_pcgen_apg_alpha_x_set.pcz</a><br>
+			<em>File</em>: <a href="">5164_pcgen_apg_alpha_update_01.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
-			Release Date: </em>xxxx-xx-xx</p>
+			Release Date: </em>2010-11-30</p>
 			
-		  <p>* Note: The Pathfinder Advanced Players Guide Alpha x Data Set is exactly that, an alpha data set, and as such will contain errors and exclusions. </p>
+		  <p>* Note: The Pathfinder Advanced Players Guide Alpha Update Data Set is exactly that, an alpha data set, and as such will contain errors and exclusions. </p>
 		</blockquote>
 
 		<p></p>
@@ -85,7 +85,7 @@
 
 		<h3>Prerequisites</h3>
 
-		<p>Java 5. PCGEN 5.14.1 is not compatible with Java 1.4.x and it is NOT SUPPORTED. 
+		<p>Java 5. PCGEN 5.16.4 is not compatible with Java 1.4.x and it is NOT SUPPORTED. 
 		To get the latest version of Java, go to 
 		<a href="http://jdl.sun.com/webapps/getjava/BrowserRedirect?locale=en&amp;host=java.com">java.com</a>.</p>
 
