--- a/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-11-30-2010.html
+++ b/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-11-30-2010.html
@@ -4,13 +4,13 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >
-		<title>Release Notes for PCGen OOC Data Sets v5.16.4</title>
+		<title>Release Notes for PCGen OOC Data Sets v5.16.4 Release 1</title>
 		<link rel="stylesheet" type="text/css" href="http://sourceforge.net/cssdef.php">
 	</head>
 
 	<body>
 
-		<h1>Release Notes for PCGen OOC Data Sets v5.16.4</h1>
+		<h1>Release Notes for PCGen OOC Data Sets v5.16.4 (Release 1)</h1>
 
 		<h2>Table of Content</h2>
 
@@ -43,7 +43,7 @@
 		<h2><a name="DataSets">Data Sets in this release</a></h2>
 
 		<blockquote> 
-		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide Data Set (Alpha x)</strong><br>
+		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide Data Set (Alpha Update 1)</strong><br>
 			<em>File</em>: <a href="">5164_pcgen_apg_alpha_update_01.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
